fix clipping

--- a/frontend/src/css/base.css
+++ b/frontend/src/css/base.css
@@ -1,10 +1,18 @@
 body {
   min-height:100%;
-  background-size: 50%;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  height: 100%;
+  width: 100%;
   padding: 0;
   margin: 0;
   overflow: hidden;
+  background-size: 50%;
   animation: backgroundScroll .84s linear infinite;
+  position: absolute;
 }
 
 .nyanner {
